feat: eslintの設定を追加

--- a/package.json
+++ b/package.json
@@ -5,15 +5,29 @@
 	"exports": {
 		"./typescript": "./typescript/base.json",
 		"./typescript/nextjs": "./typescript/nextjs.json",
-		"./typescript/react-library": "./typescript/react-library.json"
+		"./typescript/react-library": "./typescript/react-library.json",
+		"./eslint/*": "./eslint/*.js"
 	},
 	"files": [
-		"typescript"
+		"typescript",
+		"eslint"
 	],
+	"dependencies": {
+		"@typescript-eslint/eslint-plugin": "^8.18.2",
+		"@typescript-eslint/parser": "^8.18.2",
+		"@vercel/style-guide": "^6.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-only-warn": "^1.1.0",
+		"eslint-plugin-tailwindcss": "^3.17.5"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
 		"husky": "^9.1.7"
+	},
+	"peerDependencies": {
+		"eslint": "^8"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
