--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@typescript-eslint/parser": "^8.18.2",
 		"@vercel/style-guide": "^6.0.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-functional": "6.6.3",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-tailwindcss": "^3.17.5"
