--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
 		"./typescript": "./typescript/base.json",
 		"./typescript/nextjs": "./typescript/nextjs.json",
 		"./typescript/react-library": "./typescript/react-library.json",
-		"./eslint/*": "./eslint/*.js"
+		"./eslint/*": "./eslint/*.mjs"
 	},
 	"files": [
 		"typescript",
 		"eslint"
 	],
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^8.18.2",
-		"@typescript-eslint/parser": "^8.18.2",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-functional": "6.6.3",
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+		"@eslint/js": "^9.25.1",
+		"eslint": "^9.25.1",
+		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-functional": "^9.0.1",
 		"eslint-plugin-import": "^2.31.0",
-		"eslint-plugin-tailwindcss": "^3.17.5"
+		"eslint-plugin-tailwindcss": "^3.18.0",
+		"globals": "^16.0.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.31.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
@@ -35,7 +38,7 @@
 		"husky": "^9.1.7"
 	},
 	"peerDependencies": {
-		"eslint": ">=8 <9"
+		"eslint": ">=9 <10"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
