--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yoshinani/style-guide",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Yoshinani's Style Guide",
 	"homepage": "https://github.com/yoshinani-dev/style-guide#readme",
 	"bugs": {
@@ -27,6 +27,8 @@
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-functional": "^9.0.1",
 		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"globals": "^16.0.0",
 		"typescript": "^5.8.3",
