--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"globals": "^16.0.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.31.0"
+		"typescript-eslint": "^8.31.0",
+		"@commitlint/config-conventional": "^19.8.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
-		"@commitlint/config-conventional": "^19.8.0",
 		"husky": "^9.1.7"
 	},
 	"peerDependencies": {
