--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yoshinani/style-guide",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"description": "Yoshinani's Style Guide",
 	"homepage": "https://github.com/yoshinani-dev/style-guide#readme",
 	"bugs": {
@@ -34,15 +34,16 @@
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"globals": "^16.0.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.31.0",
-		"@commitlint/config-conventional": "^19.8.0"
+		"typescript-eslint": "^8.31.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
-		"husky": "^9.1.7"
+		"husky": "^9.1.7",
+		"@commitlint/config-conventional": "19.8.0"
 	},
 	"peerDependencies": {
-		"eslint": ">=9 <10"
+		"eslint": ">=9 <10",
+		"@commitlint/config-conventional": "19.8.0"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
