--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yoshinani/style-guide",
-	"version": "0.1.8",
+	"version": "0.1.9",
 	"description": "Yoshinani's Style Guide",
 	"license": "MIT",
 	"homepage": "https://github.com/yoshinani-dev/style-guide#readme",
@@ -28,8 +28,8 @@
 	],
 	"dependencies": {
 		"@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
+		"@commitlint/config-conventional": "^19",
 		"@eslint/js": "^9.25.1",
-		"eslint": "^9.25.1",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-functional": "^9.0.1",
 		"eslint-plugin-import": "^2.31.0",
@@ -37,18 +37,17 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"globals": "^16.0.0",
-		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.31.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
-		"husky": "^9.1.7",
-		"@commitlint/config-conventional": "19.8.0"
+		"husky": "^9.1.7"
 	},
 	"peerDependencies": {
-		"eslint": ">=9 <10",
-		"@commitlint/config-conventional": "^19",
-		"prettier": "^3"
+		"eslint": "^9",
+		"prettier": "^3",
+		"typescript": "^5",
+		"@commitlint/cli": "^19"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
