--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"cspell"
 	],
 	"dependencies": {
-		"@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
 		"@commitlint/config-conventional": "^19",
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
 		"@eslint/js": "^9.25.1",
 		"eslint-config-prettier": "^10.1.2",
 		"eslint-plugin-functional": "^9.0.1",
@@ -40,18 +40,20 @@
 		"typescript-eslint": "^8.31.0"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.29.4",
 		"@commitlint/cli": "^19.8.0",
 		"husky": "^9.1.7"
 	},
 	"peerDependencies": {
+		"@commitlint/cli": "^19",
 		"eslint": "^9",
 		"prettier": "^3",
-		"typescript": "^5",
-		"@commitlint/cli": "^19"
+		"typescript": "^5"
 	},
 	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
 	"scripts": {
-		"prepare": "husky"
+		"prepare": "husky",
+		"release": "changeset publish"
 	},
 	"publishConfig": {
 		"access": "public"
