--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "./typescript/react-library": "./typescript/react-library.json",
     "./eslint/*": "./eslint/*.mjs",
     "./commitlint": "./commitlint/commitlint.config.mjs",
-    "./prettier": "./prettier/prettier.config.cjs"
+    "./prettier": "./prettier/prettier.config.cjs",
+    "./biome": "./biome.jsonc"
   },
   "files": [
-    "typescript",
-    "eslint",
+    "biome",
     "commitlint",
+    "cspell",
+    "eslint",
     "prettier",
-    "cspell"
+    "typescript"
   ],
   "dependencies": {
     "@commitlint/config-conventional": "^19.8.1",
@@ -40,6 +42,7 @@
     "typescript-eslint": "^8.34.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.1",
     "@changesets/cli": "^2.29.4",
     "@commitlint/cli": "^19.8.1",
     "husky": "^9.1.7"
@@ -53,11 +56,10 @@
   "scripts": {
     "prepare": "husky",
     "release": "changeset publish",
-    "format": "prettier --write ."
+    "format": "biome format --write ."
   },
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
-  "prettier": "./prettier/prettier.config.cjs"
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
