--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "./biome": "./biome.jsonc"
   },
   "files": [
-    "biome",
+    "biome.jsonc",
     "commitlint",
     "cspell",
     "eslint",
