feat: pnpmをv10に固定

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.10.1",
   "description": "Yoshinani's Style Guide",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://github.com/yoshinani-dev/style-guide#readme",
   "bugs": {
     "url": "https://github.com/yoshinani-dev/style-guide/issues"
@@ -11,14 +14,19 @@
     "type": "git",
     "url": "https://github.com/yoshinani-dev/style-guide.git"
   },
+  "scripts": {
+    "prepare": "husky",
+    "release": "changeset publish",
+    "format": "biome format --write ."
+  },
   "exports": {
+    "./biome": "./biome.jsonc",
+    "./commitlint": "./commitlint/commitlint.config.mjs",
+    "./eslint/*": "./eslint/*.mjs",
+    "./prettier": "./prettier/prettier.config.cjs",
     "./typescript": "./typescript/base.json",
     "./typescript/nextjs": "./typescript/nextjs.json",
-    "./typescript/react-library": "./typescript/react-library.json",
-    "./eslint/*": "./eslint/*.mjs",
-    "./commitlint": "./commitlint/commitlint.config.mjs",
-    "./prettier": "./prettier/prettier.config.cjs",
-    "./biome": "./biome.jsonc"
+    "./typescript/react-library": "./typescript/react-library.json"
   },
   "files": [
     "biome.jsonc",
@@ -52,14 +60,5 @@
     "eslint": "^9",
     "prettier": "^3",
     "typescript": "^5"
-  },
-  "scripts": {
-    "prepare": "husky",
-    "release": "changeset publish",
-    "format": "biome format --write ."
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+  }
 }
