--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,15 +14,18 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
+          version: 10
           run_install: false
+
       - name: Setup Node.js 22.x
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          cache: "pnpm"
+          cache: pnpm
 
       - name: Install Dependencies
         run: pnpm install
