feat: organizeImportsを有効化しこのリポジトリを整形

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "biome.enabled": true,
   "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports.biome": "explicit"
+  },
   "extensions.ignoreRecommendations": false,
   "cSpell.customDictionaries": {
     "yoshinani": {
