--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "prepare": "husky",
     "release": "changeset publish",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "check": "biome check ."
   },
   "exports": {
     "./biome": "./biome/base.jsonc",
