--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "prepare": "husky",
     "release": "changeset publish",
-    "format": "biome format --write .",
-    "check": "biome check ."
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "exports": {
     "./biome": "./biome/base.jsonc",
