fix: changesetsのPRにもcheckのCIが実行されるよう修正

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,9 +2,7 @@ name: Check
 
 on:
   pull_request:
-  push:
-    branches:
-      - 'changeset-release/*'
+  pull_request_target:
 
 jobs:
   check:
