--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yoshinani/style-guide",
   "version": "0.12.2",
-  "description": "Yoshinani's Style Guide",
+  "description": "YOSHINANI's Style Guide",
   "license": "MIT",
   "type": "module",
   "engines": {
