--- a/biome/base.jsonc
+++ b/biome/base.jsonc
@@ -1,5 +1,11 @@
 {
   "$schema": "../node_modules/@biomejs/biome/configuration_schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true,
+    "defaultBranch": "main"
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space"
