refactor: cspell設定を.vscode/配下に移動しvscodeの設定と共通化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,5 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "explicit"
   },
-  "extensions.ignoreRecommendations": false,
-  "cSpell.customDictionaries": {
-    "yoshinani": {
-      "name": "yoshinani",
-      "path": "${workspaceFolder}/cspell/words.txt",
-      "addWords": false
-    }
-  }
+  "extensions.ignoreRecommendations": false
 }
