--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,17 +5,17 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  id-token: write
+  pull-requests: write
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      id-token: write
-      pull-requests: write
 
     steps:
       - name: Checkout Repo
@@ -27,10 +27,10 @@ jobs:
           version: 10
           run_install: false
 
-      - name: Setup Node.js 22.x
+      - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: 22.x
+          node-version: 24
           cache: pnpm
 
       - name: Install Dependencies
@@ -45,4 +45,3 @@ jobs:
           commit: "release: changeset publish"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
