--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "engines": {
-    "node": "22",
+    "node": ">=22",
     "pnpm": "10"
   },
   "publishConfig": {
