--- a/biome/base.jsonc
+++ b/biome/base.jsonc
@@ -19,7 +19,16 @@
   "linter": {
     "enabled": false
   },
-  "html": { "formatter": { "selfCloseVoidElements": "always" } },
+  "html": {
+    "formatter": {
+      "selfCloseVoidElements": "always"
+    }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
   "assist": {
     "enabled": false,
     "actions": {
