--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yoshinani-dev/style-guide.git"
+    "url": "git+https://github.com/yoshinani-dev/style-guide.git"
   },
   "scripts": {
     "prepare": "husky",
