--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-better-tailwindcss": "^3.7.9",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
